--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for lazy
 
+{{$NEXT}}
+
 0.000002  2018-05-04 19:15:11Z
     - App::cpm 0.973 broke this module. Switch to using App::cpm::CLI to fix
       this.
