--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for lazy
 
 {{$NEXT}}
+    - Add more debugging to test
 
 0.000003  2018-05-05 04:38:01Z
     - local::lib is now a required dependency
