--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for lazy
 
 {{$NEXT}}
+    - Bump App::cpm prereq to latest version (0.975)
+    - use lazy later in t/local-install-via-args.t
 
 0.000005  2018-05-10 16:31:51Z
     - Skip live test if cpan.metacpan.org is not reachable
