--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for lazy
 
 {{$NEXT}}
+    - Revert eval special case. This was a bad idea.
 
 0.000007  2018-07-24 15:22:16Z
     - In general, don't install modules which are loaded inside an eval
